# immoney

./: .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  Makefile  README.md  generate-currencies.py  generate-requirements.txt  goose.yaml  mypy.ini  pyproject.toml  requirements.txt  ruff.toml  setup.cfg  tests.py
.github/: CONTRIBUTING.md  dependabot.yaml
.github/workflows/: ci.yaml  codeql-analysis.yml  release.yaml
.goose/check-manifest/: manifest.json  requirements.txt
.goose/node/: manifest.json
.goose/python/: manifest.json  requirements.txt
src/immoney/: __init__.py  _base.py  _cache.py  _frozen.py  _parsers.py  _primitives.py  _pydantic.py  babel.py  currencies.py  errors.py  registry.py  types.py
tests/: check.py  custom_currency.py  strategies.py  test_arithmetic.py  test_babel.py  test_base.py  test_currency.py  test_initial.py  test_money.py  test_overdraft.py  test_pydantic.py  test_registry.py  test_subunit_fraction.py
