[build-system]
requires = [
  "setuptools==71.1.0",
  "setuptools-scm==8.1.0",
  "wheel==0.43.0",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_file = "src/immoney/_version.py"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
readme = {file = "README.md", content-type = "text/markdown; charset=UTF-8"}

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false


[project]
name = "immoney"
authors = [
  { name="Anton Agestam", email="git@antonagestam.se" },
]
description = "Immutable money types for Python"
license = {text = "BSD-3-Clause"}
requires-python = ">=3.10"
classifiers = [
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Development Status :: 4 - Beta",
  "Typing :: Typed",
]
keywords = [
  "money",
  "finance",
  "fintech",
  "type-driven",
  "immutable",
]
dynamic = ["version", "readme"]
dependencies = [
  "typing-extensions>=4.6.3",
  "abcattrs>=0.3.2",
]

[project.optional-dependencies]
pydantic = [
  "pydantic>=2.0.3",
  # 2.10 deprecates some functions under pydantic.core_schema.*, forcing dropping
  # support for prior versions.
  "pydantic-core>=2.10",
]
babel = ["babel>=2.12.1"]
test = [
  "pytest",
  "coverage",
  "hypothesis",
]
type-check = [
  "mypy",
  "types-setuptools",
  "types-babel",
]

[project.urls]
"Source Repository" = "https://github.com/antonagestam/immoney/"
"Bug Tracker" = "https://github.com/antonagestam/immoney/issues"


[tool.pip-tools]
generate-hashes = true
strip-extras = true
upgrade = true


[tool.black]
target-version = ["py310"]


[tool.pytest.ini_options]
testpaths = ["tests", "src"]
addopts = "--doctest-modules"


[tool.ruff]
fix = true
target-version = "py310"
extend-select = [
  # bugbear
  "B",
  # comprehensions
  "C4",
  # mccabe
  "C90",
  # bandit
  "S",
  # blind exception
  # Bare excepts are caught without this, but this also catches `except Exception: ...`.
  "BLE",
  # builtins
  "A",
  # Enforce valid noqa comments.
  "RUF100",
  # isort
  "I",
  # pycodestyle
  "W",
  # pyupgrade
  "UP",
  # debugger
  "T10",
  # print
  "T20",
  # quotes
  "Q",
  # simplify
  "SIM",
  # tidy imports
  # We use this to only outlaw relative _parent_ imports, other relative imports are OK.
  "TID",
]
extend-ignore = [
  # There's no reason to outlaw asserts.
  # https://stackoverflow.com/a/68429294/1220706
  "S101",
  # Ignore line-length. This is enforced by black, but all cases cannot be handled.
  # Ideally we'd only suppress this in generated files.
  "E501",
  # Allow function calls in argument defaults.
  "B008",
]

[tool.ruff.isort]
force-single-line = true
known-first-party = ["immoney", "tests"]

[tool.ruff.mccabe]
max-complexity = 10

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "parents"

[tool.ruff.extend-per-file-ignores]
"tests/*" = [
  # Cryptographically safe usage of PRNGs is not relevant in tests.
  "S311",
  # "Yoda conditions are discouraged", this is dangerous to apply in tests, as it
  # destroys some cases that are designed to tests bi-directional equality.
  "SIM300",
]
