[metadata]
name = immoney
version = attr: immoney.__version__
description = Immutable money types for Python
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
license = BSD 3-Clause License
license_files = LICENSE
classifiers =
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Development Status :: 4 - Beta
    Typing :: Typed
author = Anton Agestam
author_email = git@antonagestam.se
url = https://github.com/antonagestam/immoney/

[options]
include_package_data = True
package_dir =
    =src
packages = find:
python_requires = >=3.10
install_requires =
    phantom-types>=2.1.0
    typing-extensions>=4.6.3
    abcattrs>=0.3.2
    immutables>=0.19.0

[options.packages.find]
where = src

[options.package_data]
immoney = py.typed

[options.extras_require]
pydantic =
    pydantic>=2.0b3

test =
    pytest
    coverage
    hypothesis

[flake8]
exclude = appveyor,.idea,.git,.venv,.tox,__pycache__,*.egg-info,build
max-complexity = 8
max-line-length = 88
# B008: It's ok to instantiate instances as defaults.
# E203: Black does the right thing, flake8 doesn't.
# B019: This is the point of caching ...
# B024: Abstract base classes should not be expected to introduce abstract methods.
extend-ignore = E203 B008 B019 B024

[isort]
profile = black
src_paths = src, tests
force_single_line = True

[mypy]
python_version = 3.10
show_error_codes = True
pretty = True
files = src, tests

ignore_missing_imports = False
no_implicit_reexport = True
no_implicit_optional = True
strict_equality = True
strict_optional = True
check_untyped_defs = True
disallow_incomplete_defs = True
disallow_untyped_defs = True
disallow_untyped_calls = True
disallow_untyped_decorators = True
disallow_subclassing_any = True

warn_unused_configs = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_return_any = True
warn_unreachable = True

[mypy-tests.*]
disallow_untyped_defs = False
disallow_untyped_calls = False
disallow_any_expr = False
disallow_untyped_decorators = False
disallow_incomplete_defs = False

[coverage:run]
source = src
branch = True

[coverage:report]
skip_covered = True
show_missing = True
exclude_lines =
    pragma: no cover
    # ignore non-implementations
    ^\s*\.\.\.
    ^\s*if TYPE_CHECKING:$
